--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,10 @@
 @import "~bootstrap/scss/bootstrap";
 @import "~@fortawesome/fontawesome-free/css/all.min.css";
+
 body {
 background-color: papayawhip;
+}
+
+.hide{
+  display: none;
 }
